--- a/pages/10305.html
+++ b/pages/10305.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9288/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -902,14 +902,18 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> are bound states of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a></p>
+
+<p>(at temperature high enough that these bound states decay, one speaks of a <em><a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a></em>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/nucleus+%28physics%29">nuclie</a> of <a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> are bound states of those <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> which are <a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>, namely <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/atomic+nuclei">atomic nuclei</a> are bound states of certain <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>, nameluy of <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a> (<a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>)</p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> are <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of <a class="existingWikiWord" href="/nlab/show/nucleus+%28physics%29">nuclei</a> and <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a></p>
+
+<p>(at temperature high enough that these bound states decay, one speaks of a <em><a class="existingWikiWord" href="/nlab/show/plasma">plasma</a></em>)</p>
 </li>
 
 <li>
@@ -946,14 +950,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 03:04:16.
+  Last revised on November 17, 2018 at 08:52:17.
   See the <a href="https://ncatlab.org/nlab/history/bound state" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/bound state/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
