--- a/pages/19943.html
+++ b/pages/19943.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      quark-gluon plasma in nLab
+      plasma in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      quark-gluon plasma
+      plasma
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9284/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9287/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -893,144 +893,25 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<ul>
-<li><a href='#nonperturbative_regime'>Non-perturbative regime</a></li>
-<li><a href='#perturbative_regime'>Perturbative regime</a></li>
-</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
-<ul>
-<li><a href='#general'>General</a></li>
-<li><a href='#nonperturbative_aspects'>Non-perturbative aspects</a></li>
-<li><a href='#experimental_realization'>Experimental realization</a></li>
-<li><a href='#description_via_adscft'>Description via AdS/CFT</a></li>
-</ul>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>quark-gluon plasma</em> is the <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase of matter</a> of <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> at extremely high <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a>. At high temperature <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> are not <a class="existingWikiWord" href="/nlab/show/confinement">confined</a> to <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> but propagate freely together with the <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a>, forming a “quark-gluon soup”. Since this is analogous to an ordinary <a class="existingWikiWord" href="/nlab/show/plasma">plasma</a> which is a <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> where <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a> and <a class="existingWikiWord" href="/nlab/show/protons">protons</a> are no longer <a class="existingWikiWord" href="/nlab/show/bound+state">bound</a> to <a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> but propagate freely, one speaks of <em>quark-gluon plasma</em>.</p>
+<p>A <em>plasma</em> is a <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> of <a class="existingWikiWord" href="/nlab/show/baryon">baryonic</a> <a class="existingWikiWord" href="/nlab/show/matter">matter</a> at <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> high enough that <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a> and <a class="existingWikiWord" href="/nlab/show/nuclei">nuclei</a> do not form <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> (<a class="existingWikiWord" href="/nlab/show/atoms">atoms</a>) but each propate freely.</p>
 
-<p><span class="newWikiWord">QCDPhaseDiagram.jpg<a href="/nlab/files/QCDPhaseDiagram.jpg">?</a></span></p>
-<center>
-<img src="https://ncatlab.org/nlab/files/QCDPhaseDiagram.jpg" width="400" />
-</center>
-<blockquote>
-<p>graphics grabbed from <a href="#Blaizot03">Blaizot 03</a>.</p>
-</blockquote>
+<h2 id="related_concepts">Related concepts</h2>
 
-<h3 id="nonperturbative_regime">Non-perturbative regime</h3>
-
-<p>Despite the <a class="existingWikiWord" href="/nlab/show/confinement">deconfinement</a> beyond <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>T</mi> <mi>c</mi></msub></mrow><annotation encoding="application/x-tex">T_c</annotation></semantics></math>, the quark-gluon plasma at temperature <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo><mn>4</mn><mo>−</mo><mn>5</mn><msub><mi>T</mi> <mi>c</mi></msub></mrow><annotation encoding="application/x-tex">\sim 4-5 T_c</annotation></semantics></math> as produced in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> (<a href="#AdamsEtAl05">Adams et al. 05</a>, <a href="#AdcoxEtAl05">Adcox et al. 05</a>) is apparently strongly <a class="existingWikiWord" href="/nlab/show/coupling+constant">coupled</a>, meaning that its properties are <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> requiring discussion of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> as a <a class="existingWikiWord" href="/nlab/show/non-perturbative+field+theory">non-perturbative field theory</a>. With an exact such theory largely missing, much of the theoretical discussion of the quark-gluon plasma involves <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computer simulation. Indication for strong coupling of the QG-plasma comes from the nature of the <em>elliptic flow</em> seen both in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> as well as in these computer simulations, which shows <a class="existingWikiWord" href="/nlab/show/hydrodynamic">hydrodynamic</a> behaviour with extremely small <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> (e.g. <a href="#Shuryak01">Shuryak 01</a>, <a href="#Chakraborty12">Chakraborty 12</a>).</p>
-
-<p>It has been proposed (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>) that, therefore, an analytic approach to a description of the quark-gluon plasma (i.e. not just via <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computer experiment) might be given by approximate <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> (see e.g. <a href="#BiagazziCotrone12">Biagazzi-Cotrone 12</a>). The difficulty with this approach is that for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> (as opposed to <a class="existingWikiWord" href="/nlab/show/N%3D4+D%3D4+SYM">N=4 D=4 SYM</a>) <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> applies only to some approximation.</p>
-
-<h3 id="perturbative_regime">Perturbative regime</h3>
-
-<p>At yet higher energies, the quark-gluon plasma is eventually supposed to be weakly <a class="existingWikiWord" href="/nlab/show/coupling+constant">coupled</a> again, due to <a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a> (e.g. <a href="#Blaizot03">Blaizot 03</a>)</p>
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a></li>
+</ul>
 
 <h2 id="references">References</h2>
 
-<h3 id="general">General</h3>
-
 <ul>
-<li>
-<p>Stanislaw Mrowczynski, <em>Quark-Gluon Plasma</em>, Acta Phys.Polon.B29:3711, 1998 (<a href="https://arxiv.org/abs/nucl-th/9905005">arXiv:nucl-th/9905005</a>)</p>
-</li>
-
-<li>
-<p>Roman Pasechnik, Michal Šumbera, <em>Phenomenological Review on Quark-Gluon Plasma: Concepts vs. Observations</em>, Universe 2017, 3(1), 7 (<a href="https://arxiv.org/abs/1611.01533">arXiv:1611.01533</a>)</p>
-</li>
-
-<li id="Blaizot03">
-<p>Jean-Paul Blaizot, Edmond Iancu, Anton Rebhan, <em>Thermodynamics of the high temperature quark gluon plasma</em>, Quark–Gluon Plasma 3, pp. 60-122 (2004) (<a href="https://arxiv.org/abs/hep-ph/0303185">arXiv:hep-ph/0303185</a>, <a href="http://inspirehep.net/record/615570">spire:615570</a>)</p>
-</li>
-</ul>
-
-<p>See also</p>
-
-<ul>
-<li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Quark%E2%80%93gluon_plasma">Quark-Gluon plasma</a></em></li>
-</ul>
-
-<h3 id="nonperturbative_aspects">Non-perturbative aspects</h3>
-
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/non-perturvative+effects">non-perturvative effects</a> in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>:</p>
-
-<ul>
-<li id="Shuryak01">
-<p><a class="existingWikiWord" href="/nlab/show/Edward+Shuryak">Edward Shuryak</a>, <em>Nonperturbative QCD and Quark-Gluon Plasma</em>, lectures at Trieste, 2001 (<a href="http://users.ictp.it/~pub_off/lectures/lns010/Shuryak/Shuryak.pdf">pdf</a>)</p>
-</li>
-
-<li id="Chakraborty12">
-<p>Purnendu Chakraborty, <em>Non-perturbative aspects of quark gluon plasma above deconfinement temperature</em>, Proceedings of the DAE Symp. on Nucl. Phys. 57 (2012) (<a href="http://www.sympnp.org/proceedings/57/I20.pdf">pdf</a>)</p>
-</li>
-</ul>
-
-<p>Further discucssion in relation to <a class="existingWikiWord" href="/nlab/show/instantons+in+QCD">instantons in QCD</a> includes</p>
-
-<ul>
-<li>Nikolai Kochelev, <em>Ultra-light Glueballs in Quark-Gluon Plasma</em> (<a href="http://arxiv.org/abs/1501.07002">arXiv:1501.07002</a>)</li>
-</ul>
-
-<h3 id="experimental_realization">Experimental realization</h3>
-
-<p>Realization of the quark-gluon plasma at the <a class="existingWikiWord" href="/nlab/show/RHIC">RHIC</a> <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> has tentatively been claimed in</p>
-
-<ul>
-<li id="AdamsEtAl05">
-<p>John Adams, et al. <em>Experimental and theoretical challenges in the search for the quark–gluon plasma: The STAR Collaboration’s critical assessment of the evidence from RHIC collisions</em>. Nuclear Physics A 757.1-2 (2005): 102-183.</p>
-</li>
-
-<li id="AdcoxEtAl05">
-<p>K. Adcox, et al., <em>Formation of dense partonic matter in relativistic nucleus–nucleus collisions at RHIC: experimental evaluation by the PHENIX collaboration</em> Nuclear Physics A 757.1-2 (2005): 184-283.</p>
-</li>
-</ul>
-
-<h3 id="description_via_adscft">Description via AdS/CFT</h3>
-
-<p>Description via <a class="existingWikiWord" href="/nlab/show/AdS%2FCFT">AdS/CFT</a> (see at <a class="existingWikiWord" href="/nlab/show/string+theory+results+applied+elsewhere">string theory results applied elsewhere</a>):</p>
-
-<p>Expositions and reviews include</p>
-
-<ul>
-<li>
-<p>Pavel Kovtun, <em>Quark-Gluon Plasma and String Theory</em>, RHIC news (2009) (<a href="http://www.bnl.gov/rhic/news/091107/story2.asp">blog entry</a>)</p>
-</li>
-
-<li>
-<p>Makoto Natsuume, <em>String theory and quark-gluon plasma</em> (<a href="http://arxiv.org/abs/hep-ph/0701201">arXiv:hep-ph/0701201</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Steven+Gubser">Steven Gubser</a>, <em>Using string theory to study the quark-gluon plasma: progress and perils</em> (<a href="http://arxiv.org/abs/0907.4808">arXiv:0907.4808</a>)</p>
-</li>
-
-<li id="BiagazziCotrone12">
-<p>Francesco Biagazzi, A. Cotrone, <em>Holography and the quark-gluon plasma</em>, AIP Conference Proceedings 1492, 307 (2012) (<a href="https://doi.org/10.1063/1.4763537">doi:10.1063/1.4763537</a>, <a href="http://cp3-origins.dk/content/movies/2013-01-14-bigazzi.pdf">slides pdf</a>)</p>
-</li>
-
-<li id="Brambilla14">
-<p>Brambilla et al., section 9.2.2 of <em>QCD and strongly coupled gauge theories: challenges and perspectives</em>, Eur Phys J C Part Fields. 2014; 74(10): 2981 (<a href="https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-014-2981-5">doi:10.1140/epjc/s10052-014-2981-5</a>)</p>
-</li>
-</ul>
-
-<p>Holographic discussion of the <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> of the quark-gluon plasema goes back to</p>
-
-<ul>
-<li id="PolicastroSonStarinets01"><a class="existingWikiWord" href="/nlab/show/Giuseppe+Policastro">Giuseppe Policastro</a>, D.T. Son, A.O. Starinets, <em>Shear viscosity of strongly coupled <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding="application/x-tex">N=4</annotation></semantics></math> supersymmetric Yang-Mills plasma</em>, Phys. Rev. Lett.87:081601, 2001 (<a href="http://arxiv.org/abs/hep-th/0104066">arXiv:hep-th/0104066</a>)</li>
-</ul>
-
-<p>Other original articles include:</p>
-
-<ul>
-<li>
-<p>Hovhannes R. Grigoryan, Paul M. Hohler, Mikhail A. Stephanov, <em>Towards the Gravity Dual of Quarkonium in the Strongly Coupled QCD Plasma</em> (<a href="http://arxiv.org/abs/1003.1138">arXiv:1003.1138</a>)</p>
-</li>
-
-<li>
-<p>Brett McInnes, <em>Holography of the Quark Matter Triple Point</em> (<a href="http://arxiv.org/abs/0910.4456">arXiv:0910.4456</a>)</p>
-</li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Plasma_(physics)">Plasma_(physics)</a></em></li>
 </ul>
 </body></html>
 
@@ -1038,22 +919,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 08:55:49.
-  See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November 17, 2018 at 08:52:35.
+  See the <a href="https://ncatlab.org/nlab/history/plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/quark-gluon+plasma" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/plasma" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/quark-gluon+plasma" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/plasma" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/quark-gluon+plasma" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/plasma" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
