--- a/pages/19940.html
+++ b/pages/19940.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -900,7 +900,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>concept in <a class="existingWikiWord" href="/nlab/show/thermodynamics">thermodynamics</a>/<a class="existingWikiWord" href="/nlab/show/condensed+matter+physics">condensed matter physics</a></p>
+<p>(…) concept in <a class="existingWikiWord" href="/nlab/show/thermodynamics">thermodynamics</a>/<a class="existingWikiWord" href="/nlab/show/condensed+matter+physics">condensed matter physics</a> (…)</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -918,7 +918,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class="newWikiWord">plasma<a href="/nlab/new/plasma">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/plasma">plasma</a></p>
 </li>
 
 <li>
@@ -937,7 +937,17 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Phase_(matter)">Phase_(matter)</a></em></li>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Phase_(matter)">Phase_(matter)</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/State_of_matter">State of matter</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Phase_diagram">Phase diagram</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -945,14 +955,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November 17, 2018 at 03:21:30.
+  Last revised on November 17, 2018 at 08:58:49.
   See the <a href="https://ncatlab.org/nlab/history/phase of matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/phase+of+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/phase+of+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/phase+of+matter/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/phase+of+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/phase+of+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/phase of matter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
